--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 <body>
     <h1>header</h1>
+    <h3>I AM HACZOR YOU HAVE BEEN HACKED LOL!!!!!</h3>
     <script src="script.js"></script>
 </body>
 </html>
